# aes

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE.md  README.md  build.rs  pat.txt  rustfmt.toml
.github/workflows/: ci.yml  cmake-single-platform.yml  doc.yml  rust.yml
C/: Makefile  aes.c  aes.h  debug.c  debug.h  ecb.c  ecb.h  main.c  test
apps/: CMakeLists.txt  main.c
lib/: debug.h
src/: CMakeLists.txt  aes.c  aes.h  aes.rs  aes_cbc.rs  aes_ctr.rs  aes_ecb.rs  dbids_aes.rs  debug.c  debug.h  ecb.c  ecb.rs  lib.rs
tests/: aes_comparison_test.rs
